# novelist

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  aaa.cpp  aaa.h  appnovelist  main.cpp  project.sqlite  textareautils.cpp  textareautils.h
libai/: .qmlls.ini  CMakeLists.txt  client.cpp  client.h  imagesclient.cpp  imagesclient.h  imagesrequest.cpp  imagesrequest.h  imagesresponse.cpp  imagesresponse.h  request.cpp  request.h  response.cpp  response.h  responsesclient.cpp  responsesclient.h  responsesrequest.cpp  responsesrequest.h  responsesrequestutils.cpp  responsesrequestutils.h  responsesresponse.cpp  responsesresponse.h  responsesresponseutils.cpp  responsesresponseutils.h  responseutils.cpp  responseutils.h
libnovelist/: CMakeLists.txt  basestorage.cpp  basestorage.h  element.cpp  element.h  elementstorage.cpp  elementstorage.h  elementtreeview.cpp  elementtreeview.h  elementtype.cpp  elementtype.h  elementtypelistmodel.cpp  elementtypelistmodel.h  elementtypestorage.cpp  elementtypestorage.h  elementtypetablemodel.cpp  elementtypetablemodel.h  elementtypetreemodel.cpp  elementtypetreemodel.h  errorhandler.h  field.cpp  field.h  fieldlistmodel.cpp  fieldlistmodel.h  fieldstorage.cpp  fieldstorage.h  fieldtype.cpp  fieldtype.h  fieldtypelistmodel.cpp  fieldtypelistmodel.h  fieldtypestorage.cpp  fieldtypestorage.h  jsonable.h  logging.cpp  logging.h  node.cpp  node.h  nodelistmodel.cpp  nodelistmodel.h  nodestorage.cpp  (+33 more)
novelist/: helpers.cpp  logging.cpp
qml/: ChatOutput.qml  ChatPage.qml  ElementTreeviewDelegateLabel.qml  FieldListView.qml  FieldTypeListView.qml  Main.qml  NodeListView.qml  RoundButton.qml  SquareBubble.qml  ValueTypeListView.qml
src/libai/: airequest.cpp  airequest.h  client.cpp  client.h  config.h  helpers.h  json.h  logging.h  request.cpp  request.h  response.cpp  response.h  responsesrequest.cpp  responsesrequest.h
src/libai/config/: base.h  common.h  conversation.cpp  conversation.h  empty.h  error.cpp  error.h  includelist.h  input.h  inputitem.h  itemreference.h  message.h  output.h  outputmessage.h  prompt.h  reasoning.h  refusal.h  streamoptions.h  stringlist.h  tools.h
src/libai/images/: client.cpp  client.h  request.cpp  request.h  response.cpp  response.h
src/libai/responses/: client.cpp  client.h  request.cpp  request.h  response.cpp  response.h
src/libnovelist/: element.cpp  element.h  field.cpp  field.h  fieldlistmodel.cpp  fieldlistmodel.h  interfaces.cpp  interfaces.h  logging.cpp  logging.h  node.cpp  node.h  nodetype.cpp  nodetype.h  novelist.cpp  novelist.h  project.cpp  project.h  projectstore.cpp  projectstore.h  validator.cpp  validator.h
src/novelist/: main.cpp  novelist_nl_BE.ts
